--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,14 +1,15 @@
-import {getCollection} from 'astro:content';
-
-import FormattedDate from '../components/FormattedDate.astro';
+import BaseHead from '../components/BaseHead.astro';
 import Prose from '../components/Prose.astro';
-import '../styles/global.css';
+import {SITE_DESCRIPTION, SITE_TITLE} from '../consts';
 
-export const posts = (await getCollection('blog')).sort(
-  (a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
-);
+<head>
+  <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+</head>
 
 <main>
+
+[Home](/)
+
 <Prose>
 
 # greglinscheid.com
@@ -19,22 +20,7 @@ Welcome to my website!
 
 ## Blog
 
-Some things I've written about.
-
-<section>
-  <ul>
-    {posts.map(post => (
-      <li>
-        <a href={`/blog/${post.slug}/`}>
-          <h4 class="title">{post.data.title}</h4>
-          <p class="date">
-            <FormattedDate date={post.data.pubDate} />
-          </p>
-        </a>
-      </li>
-    ))}
-  </ul>
-</section>
+If I write anything, you can find it in [my blog](/blog)
 
 ## Projects
 
