:rocket: We are a go for launch

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -21,11 +21,13 @@ export const post = (await getCollection('blog')).sort(
 
 # greglinscheid.com
 
-<img src="/greg.jpg" alt="Greg" class="w-52" />
+<img src="/greg-portrait.jpg" alt="Greg" class="w-52" />
 
 Welcome to my website!
 
 ## Blog
+
+<img src="/blog/hello-world.jpg" alt="Milo" class="w-52" />
 
 If I write anything, you can find it in [my blog](/blog)
 
@@ -55,7 +57,12 @@ Here are some things I've worked on for fun.
 
 ## Contact
 
-You can reach out to me at the following address: [linscheid.greg@gmail.com](mailto:linscheid.greg@gmail.com)
+<span>
+  You can reach out to me at the following address:{' '}
+  <a website for Grega href="mailto:linscheid.greg@gmail.com">
+    linscheid.greg@gmail.com
+  </a>
+</span>
 
 ## Acknowledgements
 
@@ -65,7 +72,7 @@ The wonderful artwork that I use for my profile picture was painted by the incre
 
 To Milo and Cyn.
 
-<img src="/milo.jpg" alt="Milo" width={242} height={322} />
+<img src="/milo-index.jpg" alt="Milo" class="w-52" />
 
 </Prose>
 </main>
