--- a/src/pages/blog/index.mdx
+++ b/src/pages/blog/index.mdx
@@ -1,9 +1,9 @@
 import {getCollection} from 'astro:content';
 
 import BaseHead from '../../components/BaseHead.astro';
+import Footer from '../../components/Footer.astro';
 import FormattedDate from '../../components/FormattedDate.astro';
 import {SITE_DESCRIPTION, formatTitle} from '../../consts';
-import Footer from '../../components/Footer.astro';
 
 import '../../styles/global.css';
 
@@ -27,14 +27,19 @@ export const posts = (await getCollection('blog')).sort(
   <ul>
     {posts.map(post => (
       <li>
-        <a href={`/blog/${post.slug}/`}>
-          <h4 class="title">{post.data.title}</h4>
-          <p class="date">
-            <FormattedDate date={post.data.pubDate} />
-          </p>
+        <a href={`/blog/${post.slug}/`} class="flex flex-row gap-4">
+            <img src="/blog/hello-world.jpg" alt="Milo" class="w-52" />
+
+          <div>
+            <h4 class="title">{post.data.title}</h4>
+            <p class="date">
+              <FormattedDate date={post.data.pubDate} />
+            </p>
+          </div>
         </a>
       </li>
     ))}
+
   </ul>
 </section>
 
