--- a/src/layouts/BlogPost.mdx
+++ b/src/layouts/BlogPost.mdx
@@ -2,14 +2,16 @@ import BaseHead from '../components/BaseHead.astro';
 import Footer from '../components/Footer.astro';
 import FormattedDate from '../components/FormattedDate.astro';
 import Prose from '../components/Prose.astro';
-import {PAGE_TITLE, SITE_DESCRIPTION, formatTitle} from '../consts';
+import {SITE_DESCRIPTION, SITE_TITLE, formatTitle} from '../consts';
+
+export const PAGE_TITLE = props.title;
 
 <head>
   <BaseHead title={formatTitle(PAGE_TITLE)} description={SITE_DESCRIPTION} />
 </head>
 
 <main>
-  [Home](/) > [Blog](/blog) > _{props.title}_
+  [Home](/) > [Blog](/blog) > _{PAGE_TITLE}_
 
   <article>
     <Prose>
