--- a/src/pages/blog/index.mdx
+++ b/src/pages/blog/index.mdx
@@ -7,19 +7,17 @@ import {SITE_DESCRIPTION, formatTitle} from '../../consts';
 
 import '../../styles/global.css';
 
-export const PAGE_TITLE = 'Blog';
-
 export const posts = (await getCollection('blog')).sort(
   (a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
 );
 
 <head>
-  <BaseHead title={formatTitle(PAGE_TITLE)} description={SITE_DESCRIPTION} />
+  <BaseHead title={formatTitle('Blog')} description={SITE_DESCRIPTION} />
 </head>
 
 <main>
 
-[Home](/) > _{PAGE_TITLE}_
+[Home](/) > _Blog_
 
 # Blog
 
