:wrench: Add milo-engine to the front page

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -37,6 +37,9 @@ This is the latest entry: <a href={`/blog/${post.slug}/`}>{post.data.title}</a>
 
 Here are some things I've worked on for fun.
 
+- [milo-engine](https://milo-engine.vercel.app/?dev)
+  - An application engine for making web animations and games.
+  - Work in progress - the repository will be eventually be shared.
 - [typerion.dev](https://typerion.dev)
   - A Typescript notebook for developing, prototyping, and sharing software.
   - No longer hosted.
