:shirt: Add your own home page

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -27,8 +27,6 @@ Welcome to my website!
 
 ## Blog
 
-<img src="/blog/hello-world.jpg" alt="Milo" class="w-52" />
-
 If I write anything, you can find it in [my blog](/blog)
 
 This is the latest entry: <a href={`/blog/${post.slug}/`}>{post.data.title}</a>
@@ -45,6 +43,12 @@ Here are some things I've worked on for fun.
   - No longer hosted.
   - Repository: [https://github.com/Vilos92/typerion](https://github.com/Vilos92/typerion)
   - `npm` package: [https://www.npmjs.com/package/typerion](https://www.npmjs.com/package/typerion)
+- [greglinscheid.com](https://github.com/Vilos92/astro-greg)
+  - You're looking at it now.
+  - Repository: [https://github.com/Vilos92/astro-greg](https://github.com/Vilos92/astro-greg)
+
+## Older Stuff
+
 - [grueplan.com](https://github.com/Vilos92/balboa)
   - A social event planning web application.
   - No longer hosted.
@@ -55,8 +59,13 @@ Here are some things I've worked on for fun.
 - [Word Squared](https://word-squared.vercel.app/)
   - Word game where 4 sides must be solved to succeed.
   - Hints are given for all sides as guesses are made for any one side.
+
+## Other links
+
 - [News](http://news.greglinscheid.com)
   - A self-hosted FreshRSS instance with various sources I find interesting.
+
+<img src="/blog/hello-world.jpg" alt="Milo" class="w-52" />
 
 ## Contact
 
