--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -64,6 +64,8 @@ Here are some things I've worked on for fun.
 
 - [News](http://news.greglinscheid.com)
   - A self-hosted FreshRSS instance with various sources I find interesting.
+- [Dotfiles](https://github.com/Vilos92/dotfiles)
+  - My configuration files for various tools.
 
 <img src="/blog/hello-world.jpg" alt="Milo" class="w-52" />
 
