:wrench: FInalize with dotfiles

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -47,6 +47,15 @@ Here are some things I've worked on for fun.
   - You're looking at it now.
   - Repository: [https://github.com/Vilos92/astro-greg](https://github.com/Vilos92/astro-greg)
 
+## Other Links
+
+- [Dotfiles](https://github.com/Vilos92/dotfiles)
+  - My configuration files for various tools.
+- [News](http://news.greglinscheid.com)
+  - A self-hosted FreshRSS instance with various sources I find interesting.
+
+<img src="/blog/hello-world.jpg" alt="Milo" class="w-52" />
+
 ## Older Stuff
 
 - [grueplan.com](https://github.com/Vilos92/balboa)
@@ -59,15 +68,6 @@ Here are some things I've worked on for fun.
 - [Word Squared](https://word-squared.vercel.app/)
   - Word game where 4 sides must be solved to succeed.
   - Hints are given for all sides as guesses are made for any one side.
-
-## Other links
-
-- [News](http://news.greglinscheid.com)
-  - A self-hosted FreshRSS instance with various sources I find interesting.
-- [Dotfiles](https://github.com/Vilos92/dotfiles)
-  - My configuration files for various tools.
-
-<img src="/blog/hello-world.jpg" alt="Milo" class="w-52" />
 
 ## Contact
 
