--- a/src/pages/blog/index.mdx
+++ b/src/pages/blog/index.mdx
@@ -1,6 +1,7 @@
 import {getCollection} from 'astro:content';
 
 import BaseHead from '../../components/BaseHead.astro';
+import Breadcrumbs from '../../components/Breadcrumbs/Breadcrumbs.astro';
 import Footer from '../../components/Footer.astro';
 import FormattedDate from '../../components/FormattedDate.astro';
 import {SITE_DESCRIPTION, formatTitle} from '../../consts';
@@ -17,7 +18,7 @@ export const posts = (await getCollection('blog')).sort(
 
 <main>
 
-[Home](/) > _Blog_
+<Breadcrumbs />
 
 # Blog
 
