:wrench: Media control project

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -45,6 +45,8 @@ Here are some things I've worked on for fun.
   - No longer hosted.
   - Repository: [https://github.com/Vilos92/typerion](https://github.com/Vilos92/typerion)
   - `npm` package: [https://www.npmjs.com/package/typerion](https://www.npmjs.com/package/typerion)
+- [media-controls.nvim](https://github.com/Vilos92/media-controls.nvim)
+  - Media control bindings and status listener for nvim.
 - [greglinscheid.com](https://github.com/Vilos92/astro-greg)
   - You're looking at it now.
   - Repository: [https://github.com/Vilos92/astro-greg](https://github.com/Vilos92/astro-greg)
