:wrench: Link to lambdafunk.art

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -33,7 +33,7 @@ If I write anything, you can find it in [my blog](/blog)
 
 This is the latest entry: <a href={`/blog/${post.slug}/`}>{post.data.title}</a>
 
-## Projects
+## Software Projects
 
 Here are some things I've worked on for fun.
 
@@ -60,7 +60,7 @@ Here are some things I've worked on for fun.
 
 <img src="/blog/hello-world.jpg" alt="Milo" class="w-52" />
 
-## Older Stuff
+## Older Software Projects
 
 - [grueplan.com](https://github.com/Vilos92/balboa)
   - A social event planning web application.
@@ -72,6 +72,12 @@ Here are some things I've worked on for fun.
 - [Word Squared](https://word-squared.vercel.app/)
   - Word game where 4 sides must be solved to succeed.
   - Hints are given for all sides as guesses are made for any one side.
+
+## Music
+
+I am exploring electronic music production with [Ableton Live](https://www.ableton.com/en/live/).
+
+Catch my latest tracks and experiments at [lambdafunk.art](https://www.lambdafunk.art/).
 
 ## Contact
 
