--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -73,13 +73,17 @@ Here are some things I've worked on for fun.
   - Word game where 4 sides must be solved to succeed.
   - Hints are given for all sides as guesses are made for any one side.
 
-## Contact
+## Contact and Resume
 
 <span>
-  You can reach out to me at the following address:{' '}
-  <a website for Grega href="mailto:linscheid.greg@gmail.com">
+  You can reach out to me at the following address:
+  <a href="mailto:linscheid.greg@gmail.com">
     linscheid.greg@gmail.com
   </a>
+</span>
+
+<span>
+  You can download a copy of my resume <a href="/Resume - Greg Linscheid.pdf">here</a>.
 </span>
 
 ## Acknowledgements
