:wrench: copyparty on home page

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -37,8 +37,8 @@ This is the latest entry: <a href={`/blog/${post.slug}/`}>{post.data.title}</a>
 
 Here are some things I've worked on for fun.
 
-- [media-controls.nvim](https://github.com/Vilos92/media-controls.nvim)
-  - Media control bindings and status listener for nvim.
+- [copyparty-tunnel](https://github.com/Vilos92/copyparty-tunnel)
+  - A `Dockerfile` to simplify running a `copyparty` instance that is exposed via Cloudflare Tunnel.
 - [milo-engine](https://milo-engine.vercel.app/?dev)
   - An application engine for making web animations and games.
   - Work in progress - the repository will be eventually be shared.
@@ -62,6 +62,9 @@ Here are some things I've worked on for fun.
 
 ## Older Software Projects
 
+- [media-controls.nvim](https://github.com/Vilos92/media-controls.nvim)
+  - Media control bindings and status listener for nvim.
+  - No longer maintained. Pre-requisites are now deprecated.
 - [grueplan.com](https://github.com/Vilos92/balboa)
   - A social event planning web application.
   - No longer hosted.
