--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -80,9 +80,7 @@ Here are some things I've worked on for fun.
 
 <span>
   You can reach out to me at the following address:
-  <a href="mailto:linscheid.greg@gmail.com">
-    linscheid.greg@gmail.com
-  </a>
+  <a href="mailto:linscheid.greg@gmail.com">linscheid.greg@gmail.com</a>
 </span>
 
 <span>
